# cpp23-project-template

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
cmake/: FindStdModules.cmake  LinuxPresets.cmake  StdModules.cmake  Win32Presets.cmake  import-std.cmake  std23modules.cmake
src/: CMakeLists.txt  example.ixx  main.cpp  pch.hpp
